# nstaaf-transcripts

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  streamlit_app.py
corpus/: 1-little-fish-steam-exploded-donkey-bone-powder.md  1-no-such-thing-as-a-pilot-fish.md  10-no-such-thing-as-a-soggy-monk.md  100-no-such-thing-as-a-zillion-and-one.md  101-no-such-thing-as-a-giant-robot-michael-jackson.md  102-no-such-thing-as-a-water-mortar.md  103-no-such-thing-as-a-boa-constructor.md  104-no-such-thing-as-a-herd-of-koalas.md  105-no-such-thing-as-pancakes-for-perverts.md  106-no-such-thing-as-a-six-tier-japanese-human-pyramid.md  107-no-such-thing-as-gorillas-on-the-beach.md  108-no-such-thing-as-samurai-olaf.md  109-no-such-thing-as-a-speared-shrimp.md  11-no-such-thing-as-a-door-knob-in-vancouver.md  110-no-such-thing-as-a-dull-post-box.md  111-no-such-thing-as-snappedy-chat.md  112-no-such-thing-as-a-lego-aircraft-carrier.md  113-no-such-thing-as-a-flycycle.md  114-no-such-thing-as-a-tantrump.md  115-no-such-thing-as-a-hummingbird-pilot.md  116-no-such-thing-as-notting-mountain.md  117-no-such-thing-as-dr-no-teeth.md  118-no-such-thing-as-dinner-on-a-spider.md  119-no-such-thing-as-4d-surgery.md  12-no-such-thing-as-a-164ft-tall-gorilla-whale.md  120-no-such-thing-as-hms-kevin.md  121-no-such-thing-as-the-sword-in-the-carbon-fibre.md  122-no-such-thing-as-a-sticky-shell-spoon.md  123-no-such-thing-as-a-molten-lava-football-pitch.md  124-no-such-thing-as-a-screaming-scream.md  125-no-such-thing-as-an-upside-down-grand-prix.md  127-no-such-thing-as-carry-on-colliding.md  (+1287 more)
(+1340 files in other folders)
